[tool.poetry]
name = "quill-delta-python312"
version = "0.1"
description = "Python port of the quill.js delta library that enables operational transformation with aditional functionality for rendering html"
authors = ["Brantley Harris <brantley@forge.works>"]
license = "MIT"
homepage = "https://github.com/yesyves/quill-delta-python312"
repository = "https://github.com/yesyves/quill-delta-python312"
readme = "README.md"
packages = [
  { include = "delta" },
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Topic :: Text Processing :: Markup'
]

[tool.poetry.dependencies]
python = ">=3.12"
diff-match-patch = "^20181111.0"
lxml = {version = ">=6.0", optional = true}
cssutils = {version = ">=2.0", optional = true}

[tool.poetry.extras]
html = ["lxml", "cssutils"]

[tool.poetry.dev-dependencies]
pytest = "^4.5"
mock = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

